--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@nestjs/swagger": "^11.2.3",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.3",
+    "mailparser": "^3.9.0",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1"
   },
